--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "^3.3.7",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-scroll": "^1.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
